[tool.poetry]
name = "pydle"
version = "1.0.1"
description = "A compact, flexible, and standards-abiding IRC library for python3."
authors = ["Shiz <hi@shiz.me>"]
repository = "https://github.com/Shizmob/pydle"
keywords = ["irc", "library","python3","compact","flexible"]
license = "BSD"

[tool.poetry.dependencies]
python = ">=3.6,<3.10"

[tool.poetry.dependencies.pure-sasl]
version = "^0.6.2"
optional = true

# Stuff needed for development, but not for install&usage
[tool.poetry.dev-dependencies]
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^5.0.2"


[tool.poetry.extras]
sasl = ["pure-sasl"]

[tool.poetry.scripts]
pydle = "pydle.utils.run:main"
pydle-irccat = 'pydle.utils.irccat:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
